# FileParsing

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
docs/: openrouter_rate_limits.md  rag_chunking_design.md  vlm_token_cost.md
src/file_parse_engine/: __init__.py  cli.py  config.py  engine.py  models.py  vlm_routes.yaml
src/file_parse_engine/ocr/: __init__.py  engine.py
src/file_parse_engine/parsers/: __init__.py  base.py  epub.py  html.py  image.py  office.py  pdf.py  rtf.py  spreadsheet.py  text.py
src/file_parse_engine/renderer/: markdown.py
src/file_parse_engine/utils/: image.py  logger.py
src/file_parse_engine/vlm/: client.py  prompts.py  providers.py  routes.py
tests/: test_engine_strategy.py
tests/test_ocr/: test_engine.py
tests/test_parsers/: test_markdown_renderer.py  test_pdf_fast.py  test_registry.py  test_table_merge.py  test_text.py  test_xlsx_enhanced.py
tests/test_vlm/: test_routes.py  test_usage.py
